# tree-sitter-build2

./: .editorconfig  .gitignore  CMakeLists.txt  COPYING  Cargo.toml  Makefile  Package.swift  README.md  REUSE.toml  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
aux/: test.template
bindings/c/: tree-sitter-build2.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_build2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBuild2/: build2.h
bindings/swift/TreeSitterBuild2Tests/: TreeSitterBuild2Tests.swift
bindings/zig/: root.zig  test.zig
example/: annotations.build  conditional.build  configuration.build  continuation.build  directives.build  if-statement.build  interpolation.build  simple.build
examples/: 01.build  02.build  03.build  04.build  05.build  exe.build  extension.build  hinted.build  mutli.build  root.build  subtract-plus.build
misc/nvim/: ftdetect.lua  ftplugin.lua  install.sh
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: 001-directive-define.txt  002-directive-info.txt  003-directive-source.txt  004-directive-include.txt  005-directive-import.txt  006-configuration-path.txt  007-configuration-scope.txt  008-dependency-simple.txt  009-dependency-chain.txt
