[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-build2"
description = "Build2 grammar for tree-sitter"
version = "0.5.0"
keywords = ["incremental", "parsing", "tree-sitter", "build2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Will Reed", email = "wreed@disroot.org" }]
requires-python = ">=3.10"
license.text = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
readme = "README.md"

[project.urls]
Homepage = "https://codeberg.org/wreedb/tree-sitter-build2"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
